syntax = "proto3";

package hello;

option go_package = "./proto;hello";

// Service Definition
service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// Message Definitions
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
